--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
@@ -19,22 +19,22 @@
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <thead>
                         <tr>
-                            <th data-field="ID" data-key="14-0-0" class="">
+                            <th data-field="ID">
                                 <div class="layui-table-cell laytable-cell-14-0-0">
                                     <span>ID</span>
                                 </div>
                             </th>
-                            <th data-field="Type" data-key="14-0-1" class="">
+                            <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>集群类型</span>
                                 </div>
                             </th>
-                            <th data-field="Title" data-key="14-0-2" class="">
+                            <th data-field="Title">
                                 <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>集群名称</span>
                                 </div>
                             </th>
-                            <th data-field="Title" data-key="14-0-3" class="">
+                            <th data-field="Title">
                                 <div class="layui-table-cell laytable-cell-14-0-3">
                                     <span>kubectl配置地址</span>
                                 </div>
@@ -49,21 +49,21 @@
                         @for (var index = 0; index < _lst.Count; index++)
                         {
                             var info = _lst[index];
-                            <tr data-index="@index" class="">
-                                <td class="">
+                            <tr data-index="@index">
+                                <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.Id</div>
                                 </td>
-                                <td data-field="Type" data-key="14-0-1" class="">
+                                <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
                                         @info.RuntimeEnvType.ToString()
                                     </div>
                                 </td>
-                                <td data-field="Title" data-key="14-0-2" class="">
+                                <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-2">
                                         <a href="/cluster/update/@info.Id">@info.Name</a>
                                     </div>
                                 </td>
-                                <td data-field="Type" data-key="14-0-3" class="">
+                                <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-3">
                                         @info.ConfigName
                                     </div>
