--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/node/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/node/List.razor
@@ -16,12 +16,12 @@
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <thead>
                         <tr>
-                            <th data-field="ID" data-key="14-0-0" class="">
+                            <th data-field="ID">
                                 <div class="layui-table-cell laytable-cell-14-0-0">
                                     <span>节点IP</span>
                                 </div>
                             </th>
-                            <th data-field="Type" data-key="14-0-1" class="">
+                            <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>心跳时间</span>
                                 </div>
@@ -36,10 +36,10 @@
                         @foreach (var node in _lst)
                         {
                             <tr>
-                                <td data-field="Type" data-key="14-0-0" class="">
+                                <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-0">@node.Key</div>
                                 </td>
-                                <td data-field="Type" data-key="14-0-1" class="">
+                                <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-1">@node.Value.ToString("yyyy-MM-dd HH:mm:ss")</div>
                                 </td>
                             </tr>
