--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
@@ -4,6 +4,7 @@
 @using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
+@inject IJSRuntime js;
 
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
@@ -19,22 +20,22 @@
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <thead>
                         <tr>
-                            <th data-field="ID" data-key="14-0-0" class="">
+                            <th data-field="ID">
                                 <div class="layui-table-cell laytable-cell-14-0-0">
                                     <span>ID</span>
                                 </div>
                             </th>
-                            <th data-field="Type" data-key="14-0-1" class="">
+                            <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>Git名称</span>
                                 </div>
                             </th>
-                            <th data-field="Title" data-key="14-0-2" class="">
+                            <th data-field="Title">
                                 <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>托管地址</span>
                                 </div>
                             </th>
-                            <th data-field="Games" data-key="14-0-3" class="">
+                            <th data-field="Games">
                                 <div class="layui-table-cell laytable-cell-14-0-3">
                                     <span>账户名称</span>
                                 </div>
@@ -42,6 +43,11 @@
                             <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-4">
                                     <span>上次拉取</span>
+                                </div>
+                            </th>
+                            <th data-field="Type">
+                                <div class="layui-table-cell laytable-cell-14-0-5">
+                                    <span>操作</span>
                                 </div>
                             </th>
                         </tr>
@@ -54,24 +60,31 @@
                         @for (var index = 0; index < _lst.Count; index++)
                         {
                             var info = _lst[index];
-                            <tr data-index="@index" class="">
-                                <td class="">
+                            <tr data-index="@index">
+                                <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.Id</div>
                                 </td>
-                                <td data-field="Type" data-key="14-0-1" class="">
-                                    <div class="layui-table-cell laytable-cell-14-0-1"><a href="/git/update/@info.Id">@info.Name</a></div>
+                                <td data-field="Type">
+                                    <div class="layui-table-cell laytable-cell-14-0-1">
+                                        <a href="/git/update/@info.Id">@info.Name</a>
+                                    </div>
                                 </td>
-                                <td data-field="Title" data-key="14-0-2" class="">
+                                <td data-field="Title">
                                     <div class="laytable-cell-14-0-2">
                                         <a href="@info.Hub" target="_blank">@info.Hub</a>
                                     </div>
                                 </td>
-                                <td data-field="Items" data-key="14-0-3" class="">
+                                <td data-field="Items">
                                     <div class="layui-table-cell laytable-cell-14-0-3">@info.UserName</div>
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-4">
                                         <span>@((DateTime.Now - info.PullAt).GetDateDesc())</span>
+                                    </div>
+                                </td>
+                                <td data-field="Title">
+                                    <div class="layui-table-cell laytable-cell-14-0-5">
+                                        <button class="layui-btn layui-btn-sm" @onclick="() => ClearGit(info.Id)">清除仓库</button>
                                     </div>
                                 </td>
                             </tr>
@@ -87,9 +100,10 @@
 <style>
     .laytable-cell-14-0-0{ width: 80px; }
     .laytable-cell-14-0-1{ width: 150px; }
-    .laytable-cell-14-0-2{ width: 800px; }
+    .laytable-cell-14-0-2{ width: 600px; }
     .laytable-cell-14-0-3{ width: 150px; }
     .laytable-cell-14-0-4{ width: 150px; }
+    .laytable-cell-14-0-5{ width: 150px; }
 </style>
 
 @code{
@@ -111,4 +125,9 @@
         nav.NavigateTo("/git/add");
     }
 
+    private async Task ClearGit(int id)
+    {
+        _iocManager.Resolve<IGitOpr>().Clear(id);
+        await js.InvokeVoidAsync("layer.alert", "清除完毕", new {icon = 1});
+    }
 }
