--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
@@ -18,17 +18,17 @@
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <thead>
                         <tr>
-                            <th data-field="ID" data-key="14-0-0" class="">
+                            <th data-field="ID">
                                 <div class="layui-table-cell laytable-cell-14-0-0">
                                     <span>ID</span>
                                 </div>
                             </th>
-                            <th data-field="Type" data-key="14-0-1" class="">
+                            <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>k8s类型</span>
                                 </div>
                             </th>
-                            <th data-field="Title" data-key="14-0-2" class="">
+                            <th data-field="Title">
                                 <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>模板名称</span>
                                 </div>
@@ -43,16 +43,16 @@
                         @for (var index = 0; index < _lst.Count; index++)
                         {
                             var info = _lst[index];
-                            <tr data-index="@index" class="">
-                                <td class="">
+                            <tr data-index="@index">
+                                <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.Id</div>
                                 </td>
-                                <td data-field="Type" data-key="14-0-1" class="">
+                                <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
                                         @info.K8SKindType.ToString()
                                     </div>
                                 </td>
-                                <td data-field="Title" data-key="14-0-2" class="">
+                                <td data-field="Title">
                                     <div class="laytable-cell-14-0-2">
                                         <a href="/k8s/tpl/update/@info.Id">@info.Name</a>
                                     </div>
