完成.net core publish命令

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
@@ -139,7 +139,7 @@
 
     private async Task ClearGit(int id)
     {
-        _iocManager.Resolve<IGitOpr>().Clear(id);
+        await _iocManager.Resolve<IGitOpr>().ClearAsync(id);
         await js.InvokeVoidAsync("layer.alert", "清除完毕", new {icon = 1});
     }
 
