未使用的菜单，暂时隐藏

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -91,22 +91,22 @@
                     </dd>
                 </dl>
             </li>
-            <li data-name="redis" class="layui-nav-item">
-                <a href="javascript:;" lay-tips="Redis" lay-direction="2">
-                    <i class="layui-icon layui-icon-senior"></i>
-                    <cite>Redis</cite>
-                </a>
-                <dl class="layui-nav-child">
-                    <dd class="layui-nav-itemed">
-                        <a href="javascript:;">Stream队列</a>
-                        <dl class="layui-nav-child">
-                            <dd>
-                                <NavLink href="set/system/website.html">队列列表</NavLink>
-                            </dd>
-                        </dl>
-                    </dd>
-                </dl>
-            </li>
+            @* <li data-name="redis" class="layui-nav-item"> *@
+            @*     <a href="javascript:;" lay-tips="Redis" lay-direction="2"> *@
+            @*         <i class="layui-icon layui-icon-senior"></i> *@
+            @*         <cite>Redis</cite> *@
+            @*     </a> *@
+            @*     <dl class="layui-nav-child"> *@
+            @*         <dd class="layui-nav-itemed"> *@
+            @*             <a href="javascript:;">Stream队列</a> *@
+            @*             <dl class="layui-nav-child"> *@
+            @*                 <dd> *@
+            @*                     <NavLink href="set/system/website.html">队列列表</NavLink> *@
+            @*                 </dd> *@
+            @*             </dl> *@
+            @*         </dd> *@
+            @*     </dl> *@
+            @* </li> *@
             <li data-name="set" class="layui-nav-item">
                 <a href="javascript:;" lay-tips="设置" lay-direction="2">
                     <i class="layui-icon layui-icon-set"></i>
